<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">影视头条</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="img_content_description"></string>
    
    <!-- 影视头条 -->
    <string name="title_toutiao">影视头条</string>
    
    <!-- 用户中心 -->
    <string name="unauthorized">未登录</string>
    <string name="favorites">我的收藏</string>
    <string name="downloads">离线下载</string>
    <string name="push">推送开关</string>
    <string name="clear">清除缓存</string>
    <string name="download_failed">下载失败,请稍候重试!</string>
    <string name="download_complete">下载完成!</string>
    <string name="download_started">已经开始下载, 请耐心等候!</string>
    <string name="downloading">正在下载, 请耐心等候!</string>
    <string name="clear_cache_complete">缓存已被清空!</string>
    <string name="push_off">推送服务已经关闭</string>
    <string name="push_on">推送服务已经打开</string>
    
    <!-- 列表 -->
    <string name="list_item_sample_text">测试标题</string>
    <string name="list_item_special">专题</string>
    <string name="no_more_to_load">全部加载完毕</string>
    
    
    <string name="write_comments">写评论</string>
    
    <string name="loading">加载中, 请稍候...</string>
    
    <!-- 分享 -->
    <string name="share_cancel">取 消</string>
    <string name="share_weichat">微信</string>
    <string name="share_weichat_success">新闻已被成功分享到微信</string>
    <string name="share_weichat_denied">微信分享被拒绝</string>
    <string name="share_moments">微信朋友圈</string>
    <string name="share_sina_weibo">新浪微博</string>
    <string name="share_qq">QQ空间</string>
    <string name="share_sina_weibo_not_support">您的设备不支持分享到新浪微博</string>
    <string name="share_weichat_not_installed">您的设备尚未安装微信,请安装后再分享!</string>
    
    <!-- 专题 -->
    <string name="special_header_text">专题</string>
    <string name="special_summary">摘要</string>
    <string name="latest_news">最新消息</string>
    <string name="load_special_fails">加载专题失败,请稍候重试!</string>
    
    <!-- 收藏 -->
    <string name="my_favorites">我的收藏</string>
    
    <!-- 搜索 -->
    <string name="search_header_text">搜索</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="search_no_result">未搜索到相关内容</string>
    
    <string name="load_complete">加载完毕</string>
    <string name="press_to_load">加载评论</string>
    <string name="no_more_load">评论加载完毕!</string>
    <string name="no_comments_found">没有发现评论!</string>
    <string name="load_comment_failed">加载失败,请稍候重试!</string>
    <string name="load_failed">加载失败,请稍候重试!</string>
    
    <string name="msg_general_error">请求处理失败，请稍候重试。</string>
    <string name="msg_network_error">网络异常，请稍候重试。</string>
    <string name="msg_network_disconnected">没有网络连接，请稍候重试。</string>
    <string name="msg_network_timeout">网络请求超时，请稍候重试。</string>
    
    <!-- 详情 -->
    <string name="add_favorite_succ">成功加入收藏列表</string>
    <string name="confirm_add_comment_dlg_title">确认</string>
    <string name="confirm_add_comment_dlg_msg">确认提交评论?</string>
    <string name="add_comment_login_dlg_title">登录</string>
    <string name="add_comment_login_dlg_msg">登录用户方可评论。您需要登录吗?</string>
    <string name="add_comment_succ">评论成功!</string>
    <string name="add_comment_fail">评论失败, 请稍候重试!</string>
</resources>
