<com.yingshi.toutiao.view.SpecialHeader xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_bk"
    android:orientation="vertical" >

    <com.yingshi.toutiao.view.CustomizeImageView
        android:id="@+id/id_special_header_img"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/special_header_img_height"
        android:background="@drawable/special_header"
        android:contentDescription="@string/img_content_description" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="@dimen/special_summary_padding"
        android:layout_marginBottom="@dimen/special_summary_padding"
        android:text="@string/special_summary"
        android:textColor="@android:color/black"
        android:textSize="@dimen/special_summary_title_size"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/id_special_summary_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/special_summary_padding"
        android:layout_marginBottom="@dimen/special_summary_padding"
        android:textColor="@android:color/black"
        android:textSize="@dimen/special_summary_text_size" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingLeft="5dp"
        android:layout_marginBottom="@dimen/special_summary_padding"
        android:text="@string/latest_news"
        android:textColor="@android:color/black"
        android:textSize="@dimen/special_summary_text_size" />

</com.yingshi.toutiao.view.SpecialHeader>