<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/list_item_height"
    android:paddingLeft="@dimen/list_item_padding_1"
    android:paddingRight="@dimen/list_item_padding_1"
    android:paddingTop="@dimen/list_item_padding_2" >

    <com.yingshi.toutiao.view.CustomizeImageView
        android:id="@+id/id_news_thumbnail"
        android:layout_width="@dimen/list_item_icon_width"
        android:layout_height="@dimen/list_item_icon_height"
        android:layout_above="@+id/id_item_divider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="@drawable/list_item_thumbnail"
        android:contentDescription="@string/img_content_description" />

    <TextView
        android:id="@+id/id_news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/id_news_thumbnail"
        android:maxLines="2"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/list_item_sample_text" />

    <ImageView
        android:id="@+id/id_news_video_sign"
        android:layout_width="27dp"
        android:layout_height="15dp"
        android:layout_above="@+id/id_item_divider"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/id_news_thumbnail"
        android:contentDescription="@string/img_content_description"
        android:src="@drawable/shipin" />

    <TextView
        android:id="@+id/id_news_special_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_item_divider"
        android:layout_alignParentRight="true"
        android:paddingLeft="2dp"
        android:paddingRight="5dp"
        android:text="@string/list_item_special"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <View
        android:id="@+id/id_item_divider"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_item_divider_height"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/list_item_padding_2"
        android:background="@color/divider_color" />

</RelativeLayout>