<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gerenzhongxin_beijing"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <ImageButton
            android:id="@+id/id_btn_back_to_toutiao"
            android:layout_width="16dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gerenzhongxin_fanhui"
            android:contentDescription="@string/img_content_description"/>
    </RelativeLayout>

    <com.yingshi.toutiao.view.CustomizeImageView
        android:id="@+id/id_user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/user_profile_picutre_default"
        android:src="@drawable/user_profile_picutre_bg"
        android:contentDescription="@string/img_content_description" />

    <TextView
        android:id="@+id/id_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/unauthorized"
        android:textColor="@color/white"
        android:textSize="@dimen/user_center_list_item_text_size" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/id_favorites"
            android:layout_width="@dimen/user_center_list_item_width"
            android:layout_height="@dimen/user_center_list_item_height"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/id_favorite_img"
                android:layout_width="@dimen/user_center_list_item_icon_width"
                android:layout_height="@dimen/user_center_list_item_icon_height"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/gerenzhongxin_shoucang"
                android:contentDescription="@string/img_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/id_favorite_img"
                android:text="@string/favorites"
                android:textColor="@color/black"
                android:textSize="@dimen/user_center_list_item_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/deep_gray" />

        <RelativeLayout
            android:id="@+id/id_downloads"
            android:layout_width="@dimen/user_center_list_item_width"
            android:layout_height="@dimen/user_center_list_item_height"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/id_downloads_img"
                android:layout_width="@dimen/user_center_list_item_icon_width"
                android:layout_height="@dimen/user_center_list_item_icon_height"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/gerenzhongxin_xiazai"
                android:contentDescription="@string/img_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/id_downloads_img"
                android:text="@string/downloads"
                android:textColor="@color/black"
                android:textSize="@dimen/user_center_list_item_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/deep_gray" />

        <RelativeLayout
            android:id="@+id/id_push"
            android:layout_width="@dimen/user_center_list_item_width"
            android:layout_height="@dimen/user_center_list_item_height"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/id_push_img"
                android:layout_width="@dimen/user_center_list_item_icon_width"
                android:layout_height="@dimen/user_center_list_item_icon_height"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/gerenzhongxin_tuisong"
                android:contentDescription="@string/img_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/id_push_img"
                android:text="@string/push"
                android:textColor="@color/black"
                android:textSize="@dimen/user_center_list_item_text_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/deep_gray" />

        <RelativeLayout
            android:id="@+id/id_clear_cache"
            android:layout_width="@dimen/user_center_list_item_width"
            android:layout_height="@dimen/user_center_list_item_height"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/id_clear_cache_img"
                android:layout_width="@dimen/user_center_list_item_icon_width"
                android:layout_height="@dimen/user_center_list_item_icon_height"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/remove"
                android:contentDescription="@string/img_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/id_clear_cache_img"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="@dimen/user_center_list_item_text_size" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>